@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
left to right direction
hide circles
hide methods

title Domain Model (Excerpt) - US2.2.4 Register & Update Storage Areas

' =====================
' == AGGREGATES ==
' =====================

package "Storage Area Management Aggregate" {
    class StorageArea <<AggregateRoot>> {
        - Name : string
        - Description : string
        - Type : StorageAreaType
        - MaxBays : int
        - MaxRows : int
        - MaxTiers : int
        - MaxCapacityTeu : int
        - CurrentCapacityTeu : int
    }

    class StorageAreaType <<ValueObject>>
    class StorageAreaDockDistance <<ValueObject>> {
        - Dock : DockCode
        - DistanceKm : float
    }
}

package "Dock Registry Aggregate" {
    class Dock <<AggregateRoot>> {
        - Location : string
    }
    class DockCode <<ValueObject>>
}

package "Container Management Aggregate" {
    class Container <<AggregateRoot>> {
        - ISOId : Iso6346Code
        - Status : ContainerStatus
    }
    class Iso6346Code <<ValueObject>>
}

package "Physical Resources Aggregate" {
    class PhysicalResource <<AggregateRoot>> {
    }
    class PhysicalResourceCode <<ValueObject>>
}

package "Application Layer" {
    interface IStorageAreaService
}

' =====================
' == RELATIONSHIPS ==
' =====================

' ---- Composition inside StorageArea ----
StorageArea "1" *-- "0..*" StorageAreaDockDistance : defines >
StorageArea "1" *-- "0..*" PhysicalResourceCode : uses >

' ---- DockDistance to Dock ----
StorageAreaDockDistance "*" --> "1" DockCode : refers >
Dock "1" *-- "1" DockCode : has >

' ---- StorageArea stores containers ----
StorageArea "1" --> "0..*" Container : stores >

' ---- Container has ISO code ----
Container "1" *-- "1" Iso6346Code : identified by >


' ---- Application Service references aggregates ----
IStorageAreaService ..> StorageArea : manages >
IStorageAreaService ..> Dock : validates >
IStorageAreaService ..> PhysicalResource : validates >
IStorageAreaService ..> Container : references >

@enduml
